@@ -13468,6 +13468,9 @@ elements of a small group of domain \var{n}, returns a \var{F2v} $b$ such that
 $b[i]$ is set if and only if the small group contains a permutation sending
 $p^{-1}[1]$ to $p^{-1}[i]$.
 
+\fun{int}{group_subgroup_is_faithful}{GEN G, GEN H} return $1$ if the action
+of $G$ on $G/H$ by translation is faithful, $0$ otherwise.
+
 \fun{GEN}{groupelts_conjclasses}{GEN elts, long *pn}, where \var{elts} is
 the list of elements of a small group (sorted with respect to
 \kbd{vecsmall\_lexcmp}), return a \typ{VECSMALL} \kbd{conj} of
