@@ -4591,6 +4591,7 @@ GEN     group_quotient(GEN G, GEN H);
 GEN     group_rightcoset(GEN G, GEN g);
 GEN     group_set(GEN G, long n);
 GEN     group_subgroups(GEN G);
+int     group_subgroup_is_faithful(GEN G, GEN H);
 GEN     group_to_cc(GEN G);
 GEN     groupelts_abelian_group(GEN S);
 GEN     groupelts_center(GEN S);
